lab1 solving first commit

--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -50,6 +50,191 @@
     "\n",
     "Solve the exercise by implementing the steps using the Python concepts of lists, dictionaries, sets, and basic input/output operations. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "products = [\"t-shirt\",\"mug\",\"hat\",\"book\",\"keychain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "inventory = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Insert the quantity for t-shirt  2\n",
+      "Insert the quantity for mug  3\n",
+      "Insert the quantity for hat  2\n",
+      "Insert the quantity for book  2\n",
+      "Insert the quantity for keychain  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3\n",
+    "quantity_shirt = int(input(\"Insert the quantity for t-shirt \"))\n",
+    "quantity_mug = int(input(\"Insert the quantity for mug \"))\n",
+    "quantity_hat = int(input(\"Insert the quantity for hat \"))\n",
+    "quantity_book = int(input(\"Insert the quantity for book \"))\n",
+    "quantity_keychain = int(input(\"Insert the quantity for keychain \"))\n",
+    "\n",
+    "inventory[\"t-shirt\"] = quantity_shirt\n",
+    "inventory[\"mug\"] = quantity_mug\n",
+    "inventory[\"hat\"] = quantity_hat\n",
+    "inventory[\"book\"] = quantity_book\n",
+    "inventory[\"keychain\"] = quantity_keychain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n",
+    "customer_orders = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a product:   mug\n",
+      "Enter a product:   hat\n",
+      "Enter a product:   book\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "product_name1 = input(\"Enter a product:  \")\n",
+    "product_name2 = input(\"Enter a product:  \")\n",
+    "product_name3 = input(\"Enter a product:  \")\n",
+    "customer_orders.add(product_name1)\n",
+    "customer_orders.add(product_name2)\n",
+    "customer_orders.add(product_name3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hat\n",
+      "book\n",
+      "mug\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "for element in customer_orders:\n",
+    "    print(element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7\n",
+    "total_product_ordered = len(customer_orders)\n",
+    "total_products = quantity_shirt + quantity_mug + quantity_hat + quantity_book + quantity_keychain\n",
+    "percentage = (total_product_ordered/total_products)*100\n",
+    "\n",
+    "order_status = (total_product_ordered, percentage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order Statistics: \n",
+      "Total Products Ordered:3\n",
+      "Percentage of Products Ordered: 25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8\n",
+    "print(\"Order Statistics: \\nTotal Products Ordered:\" + str(total_product_ordered) + \"\\nPercentage of Products Ordered: \" + str(percentage))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#9\n",
+    "quantity_shirt -=1\n",
+    "quantity_mug -=1\n",
+    "quantity_hat -=1\n",
+    "quantity_book -=1\n",
+    "quantity_keychain -=1\n",
+    "\n",
+    "inventory[\"t-shirt\"] = quantity_shirt\n",
+    "inventory[\"mug\"] = quantity_mug\n",
+    "inventory[\"hat\"] = quantity_hat\n",
+    "inventory[\"book\"] = quantity_book\n",
+    "inventory[\"keychain\"] = quantity_keychain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10\n",
+    "for value in inventory.values():\n",
+    "    print(value)"
+   ]
   }
  ],
  "metadata": {
@@ -68,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
